@@ -245,6 +245,7 @@
   FN_ZORBA_NODE_PRECEDING_SIBLING_OF_2,
   FN_ZORBA_NODE_LEVEL_1,
   FN_ZORBA_NODE_LEAST_COMMON_ANCESTOR_2,
+  FN_ZORBA_NODE_COPY_1,
   FN_ABS_1,
   FN_CEILING_1,
   FN_FLOOR_1,
