@@ -19,11 +19,13 @@
 #include "zorbamisc/ns_consts.h"
 
 #include "system/globalenv.h"
+#include "context/static_context.h"
 
 #include "store/api/item.h"
 #include "store/api/iterator.h"
 #include "store/api/item_factory.h"
 #include "store/api/store.h"
+#include "store/api/copymode.h"
 
 #include "util/string_util.h"
 #include "util/uri_util.h"
@@ -624,6 +626,30 @@ IsAncestorIterator::nextImpl(store::Item_t& result, PlanState& planState) const
       GENV_ITEMFACTORY->createBoolean(result,
         lPotentialAncestor->isAncestor(lItem)
       ), state);
+
+  STACK_END (state);
+}
+
+/*******************************************************************************
+********************************************************************************/
+bool
+NodeCopyIterator::nextImpl(store::Item_t& result, PlanState& planState) const
+{
+  store::Item_t lItem;
+  store::CopyMode lCopyMode;
+  lCopyMode.set(true, 
+    theSctx->construction_mode() == StaticContextConsts::cons_preserve,
+    theSctx->preserve_mode() == StaticContextConsts::preserve_ns,
+    theSctx->inherit_mode() == StaticContextConsts::inherit_ns);
+
+  PlanIteratorState *state;
+  DEFAULT_STACK_INIT(PlanIteratorState, state, planState);
+
+  while (consumeNext(lItem, theChildren[0].getp(), planState))
+  {
+    result = lItem->copy(0, lCopyMode);
+    STACK_PUSH(true, state);
+  }
 
   STACK_END (state);
 }
